--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Fail"></activity>
+        <activity android:name=".QuestionContentActivity"></activity>
+        <activity android:name=".Review" />
+        <activity android:name=".Fail" />
         <activity android:name=".Success" />
         <activity android:name=".Problem" />
         <activity android:name=".MainActivity">
